Custom Dynamic Grid Columns & Rows:
Added the following functionality
    * allows chaning of the amount of columns & rows on the homescreen
    * allows resource overlays for const minimum and maximum values
    * maximum value can also be calculated based on the device profile (if
	specified by the overlay) - default behaviour

Change-Id: I12a676c19dbfa33a0b5dfe07ae026248ff2761bc

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -157,4 +157,12 @@
     </declare-styleable>
     <declare-styleable name="CustomClingText">
     </declare-styleable>
+
+    <!-- used in settings with min & max such as custom rows & columns -->
+    <declare-styleable name="NumberPreference">
+        <attr name="min" format="integer"></attr>
+        <attr name="max" format="integer"></attr>
+        <attr name="dynamicMax" format="boolean"></attr>
+        <attr name="dynamicMaxKey" format="string"></attr>
+    </declare-styleable>
 </resources>
