--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -168,4 +168,11 @@
         <attr name="overlay" format="boolean"/>
     </declare-styleable>
 
+    <!-- used in settings with min & max such as custom rows & columns -->
+    <declare-styleable name="NumberPreference">
+        <attr name="min" format="integer"></attr>
+        <attr name="max" format="integer"></attr>
+        <attr name="dynamicMax" format="boolean"></attr>
+        <attr name="dynamicMaxKey" format="string"></attr>
+    </declare-styleable>
 </resources>
