Trebuchet: Allow screen auto-rotation
Change-Id: I2449bb6f87aeec0c674ce9f3f9851709e3037d52

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -75,6 +75,9 @@
     <!-- Larger icons -->
     <string name="larger_icons_text">Larger icons</string>
 
+    <!-- Auto rotate screen -->
+    <string name="auto_rotate_screen_text">Auto-rotation</string>
+
     <!-- Icon labels -->
     <string name="icon_labels">Icon labels</string>
     <string name="icon_labels_show">Show</string>
