--- a/res/values/preferences_defaults.xml
+++ b/res/values/preferences_defaults.xml
@@ -11,5 +11,6 @@
     <bool name="preferences_interface_drawer_remove_hidden_apps_shortcuts_default">true</bool>
     <bool name="preferences_interface_drawer_remove_hidden_apps_widgets_default">true</bool>
     <bool name="preferences_interface_drawer_hide_icon_labels_default">false</bool>
+    <bool name="preferences_interface_general_orientation_default">@bool/allow_rotation</bool>
     <bool name="preferences_interface_general_icons_large_default">@bool/config_largeIcons</bool>
 </resources>
