Trebuchet: Support for GoogleCamera
Change-Id: I30ecd4b74afecee9af5e2106d81c683919d72f24

--- a/res/xml/default_workspace.xml
+++ b/res/xml/default_workspace.xml
@@ -160,4 +160,11 @@
         launcher:screen="4"
         launcher:x="4"
         launcher:y="0" />
+    <favorite
+        launcher:packageName="com.google.android.GoogleCamera"
+        launcher:className="com.android.camera.CameraLauncher"
+        launcher:container="-101"
+        launcher:screen="4"
+        launcher:x="4"
+        launcher:y="0" />
 </favorites>
