Trebuchet - Protected Apps  - Rewrote the LockPattern
- Fix build to work with recent revert

- PS 6:
  - Build fixed to work with LOCAL_SDK_VERSION
    -- Need to fix dependence on setting PackageManager hook for Protected apps (coming soon in Settings apk)
  - Fixed adding components to protected folders and adding protected folders to other folders
  - Fixed issues with EditText for FolderName

Change-Id: Ie1e2cdac80e8089b9a1820fcb3ea50ce65ad4b65

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -168,4 +168,10 @@
         <attr name="overlay" format="boolean"/>
     </declare-styleable>
 
+    <declare-styleable name="LockPatternView">
+        <!-- Aspect to use when drawing LockPatternView. Choices are "square"(default), "lock_width"
+             or "lock_height" -->
+        <attr name="aspect" format="string" />
+    </declare-styleable>
+
 </resources>
