Trebuchet - Protected Apps  - Rewrote the LockPattern
Change-Id: Ie1e2cdac80e8089b9a1820fcb3ea50ce65ad4b65

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -98,4 +98,7 @@
     <!-- The amount that the preview contents are inset from the preview background -->
     <dimen name="folder_preview_padding">4dp</dimen>
     <dimen name="folder_name_padding">10dp</dimen>
+
+    <!-- Pattern Lock -->
+    <dimen name="pattern_lock_header_size">20sp</dimen>
 </resources>
