Add scrolling wallpaper option to homescreen settings.
The option to enable/disable wallpaper scolling was included
in Trebuchet's wallpaper picker.  Now that the picker is part of
WallpaperCropper the option is no longer available.  This patch
brings that option back into the homescreen preferences.

Change-Id: I762bc4c4fd34c9773f970d9c41e55b859d26ad7b

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -54,6 +54,8 @@
     <string name="preferences_interface_homescreen_search_summary">Show persistent search bar at top of screen</string>
     <string name="preferences_interface_homescreen_general_hide_icon_labels_title">Hide icon labels</string>
     <string name="preferences_interface_homescreen_general_hide_icon_labels_summary">Hide icon labels on homescreen</string>
+    <string name="preferences_interface_homescreen_scrolling_wallpaper_title">Scroll wallpaper</string>
+    <string name="preferences_interface_homescreen_scrolling_wallpaper_summary">Scrolls wallpaper with homescreen</string>
 
     <!-- Drawer -->
     <string name="preferences_interface_drawer_title">Drawer</string>
