--- a/res/xml/default_workspace.xml
+++ b/res/xml/default_workspace.xml
@@ -26,6 +26,9 @@
         launcher:spanY="2" />
     <folder launcher:screen="1" launcher:x="0" launcher:y="3" launcher:title="@string/google_title">
         <favorite
+            launcher:className="com.google.android.apps.chrome.Main"
+            launcher:packageName="com.android.chrome" />
+        <favorite
             launcher:className="com.google.android.gm.GmailActivity"
             launcher:packageName="com.google.android.gm" />
         <favorite
