--- a/res/values/preferences_defaults.xml
+++ b/res/values/preferences_defaults.xml
@@ -14,4 +14,5 @@
     <bool name="preferences_interface_general_icons_large_default">@bool/config_largeIcons</bool>
     <string name="preferences_interface_general_icons_text_font_family_default">sans-serif-condensed</string>
     <integer name="preferences_interface_general_icons_text_font_style_default">0</integer>
+    <integer name="preferences_interface_drawer_sort_mode_default">0</integer>
 </resources>
