--- a/res/layout-land/launcher.xml
+++ b/res/layout-land/launcher.xml
@@ -36,7 +36,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            launcher:defaultScreen="@integer/config_workspaceDefaultScreen" />
+            launcher:defaultScreen="@integer/config_workspaceDefaultScreen"
+            launcher:pageSpacing="@dimen/workspace_page_spacing"/>
 
         <include layout="@layout/hotseat"
             android:id="@+id/hotseat"
