--- a/res/layout-port/launcher.xml
+++ b/res/layout-port/launcher.xml
@@ -35,7 +35,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             launcher:defaultScreen="@integer/config_workspaceDefaultScreen"
-            launcher:pageIndicator="@+id/page_indicator">
+            launcher:pageIndicator="@+id/page_indicator"
+            launcher:pageSpacing="@dimen/workspace_page_spacing" >
         </com.android.launcher3.Workspace>
 
         <include layout="@layout/hotseat"
