--- a/res/values-zh-rCN/cm_strings.xml
+++ b/res/values-zh-rCN/cm_strings.xml
@@ -26,6 +26,8 @@
   <string name="sort_mode_install_time">安装时间</string>
   <string name="scrolling_page_outlines">页概述</string>
   <string name="scrolling_fade_adjacent">边页淡出</string>
+  <string name="protected_app_settings">隐藏私有软件</string>
+  <string name="scrolling_wallpaper">滚动壁纸</string>
   <string name="wallpaper_scroll">滚动壁纸</string>
   <string name="preferences_title">设置</string>
   <string name="preferences_application_title">应用程序</string>
