Customizeable Dynamic Grid:  - Presets    - Comfortable (+0)    - Cozy (+1)    - Condensed (+2)  - Custom option with min, max
Reordering items in the settings pane for better organization
Modifying Settings Layout for readability

Change-Id: I5c926b6ca4b2ed73c263ef34eeb368caeb7af9b5

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -112,4 +112,6 @@
 
     <!-- Settings Pane dimen -->
     <dimen name="settings_pane_handle">48dp</dimen>
+
+    <dimen name="dialog_padding">10dp</dimen>
 </resources>
