--- a/res/layout/custom_grid_size_dialog.xml
+++ b/res/layout/custom_grid_size_dialog.xml
@@ -1,6 +1,22 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+     Copyright (C) 2014 The CyanogenMod Project
+
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/grid_number_pickers"
@@ -13,14 +29,13 @@
             android:id="@+id/custom_rows"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/dialog_padding"/>
+            android:layout_marginRight="@dimen/dialog_padding" />
 
         <NumberPicker
             android:id="@+id/custom_columns"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dialog_padding"/>
-
+            android:layout_marginLeft="@dimen/dialog_padding" />
     </LinearLayout>
 
     <Button
