--- a/res/layout/dynamic_grid_size_screen.xml
+++ b/res/layout/dynamic_grid_size_screen.xml
@@ -1,3 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+     Copyright (C) 2014 The CyanogenMod Project
+
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,7 +22,7 @@
     android:orientation="vertical"
     android:paddingBottom="@dimen/overview_panel_bottom_padding"
     android:paddingTop="@dimen/overview_panel_bottom_padding"
-    android:clickable="true" >
+    android:clickable="true">
 
     <LinearLayout
         android:id="@+id/dynamic_grid_title"
@@ -14,7 +30,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@drawable/listitem_bg"
-        android:clickable="true" >
+        android:clickable="true">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -40,7 +56,7 @@
         android:layout_height="@dimen/dynamic_grid_size_image_height"
         android:layout_gravity="center_horizontal"
         android:adjustViewBounds="true"
-        android:layout_marginBottom="@dimen/grid_padding"/>
+        android:layout_marginBottom="@dimen/grid_padding" />
 
     <ListView
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -48,5 +64,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:listSelector="@android:color/transparent"
-        android:splitMotionEvents="false"/>
+        android:splitMotionEvents="false" />
 </LinearLayout>
