--- a/res/layout/settings_pane_list_item.xml
+++ b/res/layout/settings_pane_list_item.xml
@@ -1,3 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+     Copyright (C) 2014 The CyanogenMod Project
+
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -5,7 +21,7 @@
     android:background="@drawable/listitem_bg"
     android:paddingLeft="@dimen/overview_panel_list_padding"
     android:paddingRight="@dimen/overview_panel_list_padding"
-    android:orientation="horizontal" >
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/item_name"
@@ -21,7 +37,7 @@
         android:layout_alignParentLeft="true"
         android:scrollHorizontally="true"
         android:ellipsize="end"
-        android:maxLines="1"/>
+        android:maxLines="1" />
 
     <TextView
         android:id="@+id/item_state"
@@ -39,6 +55,5 @@
         android:layout_toRightOf="@id/item_name"
         android:scrollHorizontally="true"
         android:ellipsize="end"
-        android:maxLines="1"/>
-
+        android:maxLines="1" />
 </RelativeLayout>
