Add hidden apps [3/3] Hide apps from launcher (e.g. if already on homescreen)
Change-Id: I13ce39deff7cbe60be02a87de61d5a1e8968e137

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -76,7 +76,8 @@
 
     <!-- Protected apps -->
     <string name="protected_app_settings">Protected apps</string>
-
+    <string name="hidden_apps_title">Protected apps</string>
+    
     <!-- Text for hiding/showing search screen on left (if installed) -->
     <string name="search_screen_left_text">Search panel</string>
 
