--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -76,6 +76,7 @@
 
     <!-- Protected apps -->
     <string name="protected_app_settings">Protected apps</string>
+    <string name="hidden_apps_title">Hidden apps</string>
 
     <!-- Text for hiding/showing search screen on left (if installed) -->
     <string name="search_screen_left_text">Search panel</string>
