--- a/res/layout-sw600dp/workspace_cling.xml
+++ b/res/layout-sw600dp/workspace_cling.xml
@@ -32,8 +32,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
                 android:paddingTop="20dp"
                 android:paddingBottom="20dp"
                 android:orientation="vertical"
@@ -58,7 +58,7 @@
                 style="@style/ClingButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:onClick="dismissWorkspaceCling" />
         </LinearLayout>
     </FrameLayout>
