--- a/res/layout/dialog_title_overflow_menu.xml
+++ b/res/layout/dialog_title_overflow_menu.xml
@@ -28,7 +28,7 @@
             android:background="?android:actionBarItemBackground"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|right"
+            android:layout_gravity="center_vertical|end"
             android:padding="6dip"
             android:src="@drawable/ic_menu_overflow"/>
     </LinearLayout>
