--- a/res/layout/hidden_apps_list.xml
+++ b/res/layout/hidden_apps_list.xml
@@ -3,5 +3,5 @@
     android:id="@android:id/list"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="5dp"
+    android:layout_marginStart="5dp"
     android:choiceMode="multipleChoice" />
