--- a/res/layout/settings_pane_list_header.xml
+++ b/res/layout/settings_pane_list_header.xml
@@ -3,8 +3,8 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal|bottom"
     android:background="@color/settings_bg_color"
-    android:paddingLeft="@dimen/overview_panel_list_padding"
-    android:paddingRight="@dimen/overview_panel_list_padding"
+    android:paddingStart="@dimen/overview_panel_list_padding"
+    android:paddingEnd="@dimen/overview_panel_list_padding"
     android:orientation="horizontal" >
 
     <TextView
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:drawablePadding="4dp"
         android:fontFamily="sans-serif-condensed"
-        android:gravity="left"
+        android:gravity="start"
         android:textSize="16sp"
         android:textColor="@color/settings_header_text"/>
 </RelativeLayout>
