--- a/res/layout-port/folder_cling.xml
+++ b/res/layout-port/folder_cling.xml
@@ -32,8 +32,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
                 android:paddingTop="20dp"
                 android:paddingBottom="20dp"
                 android:orientation="vertical"
@@ -60,6 +60,6 @@
         android:id="@+id/cling_dismiss"
         android:layout_marginBottom="15dp"
         android:layout_marginEnd="20dp"
-        android:layout_gravity="bottom|right"
+        android:layout_gravity="bottom|end"
         android:onClick="dismissFolderCling" />
 </com.android.launcher3.Cling>
