--- a/res/layout-port/qsb.xml
+++ b/res/layout-port/qsb.xml
@@ -54,8 +54,8 @@
         android:layout_gravity="center_vertical"
         android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"
+        android:paddingStart="8dp"
         android:paddingEnd="8dp"
-        android:paddingRight="8dp"
         android:onClick="onClickVoiceButton"
         android:focusable="true"
         android:clickable="true"
