--- a/res/layout-sw600dp-port/migration_workspace_cling.xml
+++ b/res/layout-sw600dp-port/migration_workspace_cling.xml
@@ -35,9 +35,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="4dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
+                android:layout_marginEnd="4dp"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
                 android:paddingTop="20dp"
                 android:paddingBottom="20dp"
                 android:orientation="vertical"
@@ -63,7 +63,7 @@
                 android:id="@+id/dismiss_migration_workspace_cling_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:onClick="dismissMigrationWorkspaceCling" />
         </LinearLayout>
     </FrameLayout>
