--- a/res/layout-sw600dp/folder_cling.xml
+++ b/res/layout-sw600dp/folder_cling.xml
@@ -21,9 +21,9 @@
         android:id="@+id/folder_bubble"
         android:layout_width="300dp"
         android:layout_height="match_parent"
-        android:layout_gravity="left|top"
+        android:layout_gravity="start|top"
         android:paddingTop="28dp"
-        android:paddingRight="10dp"
+        android:paddingEnd="10dp"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
@@ -37,9 +37,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="4dp"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
+                android:layout_marginEnd="4dp"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
                 android:paddingTop="20dp"
                 android:paddingBottom="20dp"
                 android:orientation="vertical"
@@ -60,7 +60,7 @@
             style="@style/ClingButton"
             android:id="@+id/cling_dismiss"
             android:layout_marginTop="5dp"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:onClick="dismissFolderCling" />
     </LinearLayout>
 </com.android.launcher3.Cling>
