--- a/res/layout-sw720dp/first_run_cling.xml
+++ b/res/layout-sw720dp/first_run_cling.xml
@@ -28,8 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="100dp"
-            android:layout_marginRight="100dp"
+            android:layout_marginStart="100dp"
+            android:layout_marginEnd="100dp"
             android:orientation="vertical">
             <TextView
                 style="@style/ClingAltTitleText"
