--- a/res/layout/custom_grid_size_dialog.xml
+++ b/res/layout/custom_grid_size_dialog.xml
@@ -13,13 +13,13 @@
             android:id="@+id/custom_rows"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/dialog_padding"/>
+            android:layout_marginEnd="@dimen/dialog_padding"/>
 
         <NumberPicker
             android:id="@+id/custom_columns"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dialog_padding"/>
+            android:layout_marginStart="@dimen/dialog_padding"/>
 
     </LinearLayout>
 
