--- a/res/layout/hidden_folder_apps_list_item.xml
+++ b/res/layout/hidden_folder_apps_list_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:minHeight="48dp"
     android:gravity="center_vertical"
-    android:paddingRight="?android:attr/scrollbarSize"
+    android:paddingEnd="?android:attr/scrollbarSize"
     android:background="?android:attr/selectableItemBackground">
 
     <ImageView android:id="@+id/icon"
@@ -15,8 +15,8 @@
     <TextView android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dip"
-        android:layout_marginRight="6dip"
+        android:layout_marginStart="15dip"
+        android:layout_marginEnd="6dip"
         android:layout_marginTop="6dip"
         android:layout_marginBottom="6dip"
         android:layout_weight="1"
