--- a/res/layout/settings_pane.xml
+++ b/res/layout/settings_pane.xml
@@ -33,8 +33,8 @@
                 android:layout_gravity="center_horizontal|bottom"
                 android:paddingBottom="@dimen/overview_panel_bottom_padding"
                 android:paddingTop="@dimen/overview_panel_list_padding"
-                android:layout_marginLeft="@dimen/overview_panel_button_spacing"
-                android:layout_marginRight="@dimen/overview_panel_button_spacing">
+                android:layout_marginStart="@dimen/overview_panel_button_spacing"
+                android:layout_marginEnd="@dimen/overview_panel_button_spacing">
 
                 <TextView
                     android:id="@+id/wallpaper_button"
@@ -44,14 +44,14 @@
                     android:drawableTop="@drawable/wallpaper_button"
                     android:fontFamily="sans-serif-condensed"
                     android:gravity="center_horizontal"
-                    android:paddingLeft="@dimen/overview_panel_button_spacing"
-                    android:paddingRight="@dimen/overview_panel_button_spacing"
+                    android:paddingStart="@dimen/overview_panel_button_spacing"
+                    android:paddingEnd="@dimen/overview_panel_button_spacing"
                     android:text="@string/wallpaper_button_text"
                     android:textAllCaps="true"
                     android:textSize="12sp"
                     android:textColor="@android:color/white"
                     android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"/>
+                    android:layout_alignParentStart="true"/>
 
                 <TextView
                     android:id="@+id/widget_button"
@@ -61,8 +61,8 @@
                     android:drawableTop="@drawable/widget_button"
                     android:fontFamily="sans-serif-condensed"
                     android:gravity="center_horizontal"
-                    android:paddingLeft="@dimen/overview_panel_button_spacing"
-                    android:paddingRight="@dimen/overview_panel_button_spacing"
+                    android:paddingStart="@dimen/overview_panel_button_spacing"
+                    android:paddingEnd="@dimen/overview_panel_button_spacing"
                     android:text="@string/widget_button_text"
                     android:textAllCaps="true"
                     android:textSize="12sp"
@@ -78,14 +78,14 @@
                     android:drawableTop="@drawable/themes_button"
                     android:fontFamily="sans-serif-condensed"
                     android:gravity="center_horizontal"
-                    android:paddingLeft="@dimen/overview_panel_button_spacing"
-                    android:paddingRight="@dimen/overview_panel_button_spacing"
+                    android:paddingStart="@dimen/overview_panel_button_spacing"
+                    android:paddingEnd="@dimen/overview_panel_button_spacing"
                     android:text="@string/themes_button_text"
                     android:textAllCaps="true"
                     android:textSize="12sp"
                     android:textColor="@android:color/white"
                     android:layout_alignParentTop="true"
-                    android:layout_alignParentRight="true" />
+                    android:layout_alignParentEnd="true" />
 
             </RelativeLayout>
         </LinearLayout>
