[WIP]Trebuchet: Fix RTL support
Change-Id: I42b673be681598581c95d2735ceb632ae62bfbf9

--- a/res/layout-port/qsb.xml
+++ b/res/layout-port/qsb.xml
@@ -55,7 +55,7 @@
         android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"
         android:paddingEnd="8dp"
-        android:paddingRight="8dp"
+        android:paddingEnd="8dp"
         android:onClick="onClickVoiceButton"
         android:focusable="true"
         android:clickable="true"
