--- a/res/layout/settings_transitions_screen.xml
+++ b/res/layout/settings_transitions_screen.xml
@@ -50,7 +50,9 @@
                 android:id="@+id/transition_options_menu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
+                android:paddingStart="10dip"
+                android:paddingEnd="10dip"
                 android:adjustViewBounds="true"
                 android:src="@drawable/overflow_options_menu" />
         </LinearLayout>
