--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -86,4 +86,12 @@
     <!-- Dashclock permission info (for CMHome) -->
     <string name="permission_label_read_extension_data">request DashClock extension data</string>
     <string name="permission_desc_read_extension_data">Allows the app to request DashClock extension data</string>
+
+    <!-- CM Home API permissions -->
+    <string name="permission_desc_feed_host">Can read any write from any applications
+       that publish cards to CM Home.</string>
+    <string name="permission_label_feed_host">Publish and unpublish cards from CM Home.</string>
+    <string name="permission_desc_feed_publish">Can add new cards to any CM Home on your
+        launcher.</string>
+    <string name="permission_label_feed_publish">Publish cards to launcher CM Home.</string>
 </resources>
