--- a/res/layout/settings_pane.xml
+++ b/res/layout/settings_pane.xml
@@ -80,15 +80,15 @@
                     android:layout_weight="0.5" />
 
                 <TextView
-                    android:id="@+id/settings_button"
+                    android:id="@+id/themes_button"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
                     android:drawablePadding="4dp"
-                    android:drawableTop="@drawable/setting_button"
+                    android:drawableTop="@drawable/themes_button"
                     android:fontFamily="sans-serif-condensed"
                     android:gravity="center_horizontal"
                     android:layout_weight="2"
-                    android:text="@string/settings_button_text"
+                    android:text="@string/themes_button_text"
                     android:textAllCaps="true"
                     android:textSize="12sp"
                     android:textColor="@android:color/white"
