--- a/res/layout/settings_pane.xml
+++ b/res/layout/settings_pane.xml
@@ -52,13 +52,19 @@
                     android:text="@string/widget_button_text" />
 
                 <TextView
-                    android:id="@+id/settings_button"
+                    android:id="@+id/themes_button"
                     android:layout_width="0dip"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    style="@style/SettingsPaneButton"
-                    android:drawableTop="@drawable/setting_button"
-                    android:text="@string/settings_button_text" />
+                    android:drawablePadding="4dp"
+                    android:drawableTop="@drawable/themes_button"
+                    android:fontFamily="sans-serif-condensed"
+                    android:gravity="center_horizontal"
+                    android:layout_weight="2"
+                    android:text="@string/themes_button_text"
+                    android:textAllCaps="true"
+                    android:textSize="12sp"
+                    android:textColor="@android:color/white"
+                    android:maxLines="2" />
 
                 <TextView
                     android:id="@+id/manage_apps_button"
